parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> definitions relations
Rule 2     definitions -> definitions definition
Rule 3     definitions -> definition
Rule 4     definition -> ACTORS EQUALS LBRACE actors RBRACE
Rule 5     definition -> CASES EQUALS LBRACE cases RBRACE
Rule 6     actors -> actors COMMA IDENTIFIER
Rule 7     actors -> IDENTIFIER
Rule 8     cases -> cases COMMA IDENTIFIER
Rule 9     cases -> IDENTIFIER
Rule 10    relations -> PACKAGE IDENTIFIER relation_list
Rule 11    relation_list -> relation_list relation
Rule 12    relation_list -> relation
Rule 13    relation -> relation_type source target_participants SLASH GT
Rule 14    source -> element_type IDENTIFIER
Rule 15    target_participants -> target_participants element_type IDENTIFIER
Rule 16    target_participants -> element_type IDENTIFIER
Rule 17    element_type -> CASE
Rule 18    element_type -> ACTOR
Rule 19    element_type -> CLASS
Rule 20    element_type -> COMPONENT
Rule 21    element_type -> INTERFACE
Rule 22    relation_type -> EXTENDS
Rule 23    relation_type -> INCLUDE
Rule 24    relation_type -> INHERIT
Rule 25    relation_type -> SIMPLE
Rule 26    relation_type -> USES
Rule 27    relation_type -> REALIZES
Rule 28    relation_type -> ASSOCIATES
Rule 29    relation_type -> DEPENDS

Terminals, with rules where they appear

ACTOR                : 18
ACTORS               : 4
ASSOCIATES           : 28
CASE                 : 17
CASES                : 5
CLASS                : 19
COMMA                : 6 8
COMPONENT            : 20
DEPENDS              : 29
EQUALS               : 4 5
EXTENDS              : 22
GT                   : 13
IDENTIFIER           : 6 7 8 9 10 14 15 16
INCLUDE              : 23
INHERIT              : 24
INTERFACE            : 21
LBRACE               : 4 5
PACKAGE              : 10
RBRACE               : 4 5
REALIZES             : 27
SIMPLE               : 25
SLASH                : 13
USES                 : 26
error                : 

Nonterminals, with rules where they appear

actors               : 4 6
cases                : 5 8
definition           : 2 3
definitions          : 1 2
element_type         : 14 15 16
program              : 0
relation             : 11 12
relation_list        : 10 11
relation_type        : 13
relations            : 1
source               : 13
target_participants  : 13 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . definitions relations
    (2) definitions -> . definitions definition
    (3) definitions -> . definition
    (4) definition -> . ACTORS EQUALS LBRACE actors RBRACE
    (5) definition -> . CASES EQUALS LBRACE cases RBRACE

    ACTORS          shift and go to state 4
    CASES           shift and go to state 5

    program                        shift and go to state 1
    definitions                    shift and go to state 2
    definition                     shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> definitions . relations
    (2) definitions -> definitions . definition
    (10) relations -> . PACKAGE IDENTIFIER relation_list
    (4) definition -> . ACTORS EQUALS LBRACE actors RBRACE
    (5) definition -> . CASES EQUALS LBRACE cases RBRACE

    PACKAGE         shift and go to state 8
    ACTORS          shift and go to state 4
    CASES           shift and go to state 5

    relations                      shift and go to state 6
    definition                     shift and go to state 7

state 3

    (3) definitions -> definition .

    PACKAGE         reduce using rule 3 (definitions -> definition .)
    ACTORS          reduce using rule 3 (definitions -> definition .)
    CASES           reduce using rule 3 (definitions -> definition .)


state 4

    (4) definition -> ACTORS . EQUALS LBRACE actors RBRACE

    EQUALS          shift and go to state 9


state 5

    (5) definition -> CASES . EQUALS LBRACE cases RBRACE

    EQUALS          shift and go to state 10


state 6

    (1) program -> definitions relations .

    $end            reduce using rule 1 (program -> definitions relations .)


state 7

    (2) definitions -> definitions definition .

    PACKAGE         reduce using rule 2 (definitions -> definitions definition .)
    ACTORS          reduce using rule 2 (definitions -> definitions definition .)
    CASES           reduce using rule 2 (definitions -> definitions definition .)


state 8

    (10) relations -> PACKAGE . IDENTIFIER relation_list

    IDENTIFIER      shift and go to state 11


state 9

    (4) definition -> ACTORS EQUALS . LBRACE actors RBRACE

    LBRACE          shift and go to state 12


state 10

    (5) definition -> CASES EQUALS . LBRACE cases RBRACE

    LBRACE          shift and go to state 13


state 11

    (10) relations -> PACKAGE IDENTIFIER . relation_list
    (11) relation_list -> . relation_list relation
    (12) relation_list -> . relation
    (13) relation -> . relation_type source target_participants SLASH GT
    (22) relation_type -> . EXTENDS
    (23) relation_type -> . INCLUDE
    (24) relation_type -> . INHERIT
    (25) relation_type -> . SIMPLE
    (26) relation_type -> . USES
    (27) relation_type -> . REALIZES
    (28) relation_type -> . ASSOCIATES
    (29) relation_type -> . DEPENDS

    EXTENDS         shift and go to state 17
    INCLUDE         shift and go to state 18
    INHERIT         shift and go to state 19
    SIMPLE          shift and go to state 20
    USES            shift and go to state 21
    REALIZES        shift and go to state 22
    ASSOCIATES      shift and go to state 23
    DEPENDS         shift and go to state 24

    relation_list                  shift and go to state 14
    relation                       shift and go to state 15
    relation_type                  shift and go to state 16

state 12

    (4) definition -> ACTORS EQUALS LBRACE . actors RBRACE
    (6) actors -> . actors COMMA IDENTIFIER
    (7) actors -> . IDENTIFIER

    IDENTIFIER      shift and go to state 26

    actors                         shift and go to state 25

state 13

    (5) definition -> CASES EQUALS LBRACE . cases RBRACE
    (8) cases -> . cases COMMA IDENTIFIER
    (9) cases -> . IDENTIFIER

    IDENTIFIER      shift and go to state 28

    cases                          shift and go to state 27

state 14

    (10) relations -> PACKAGE IDENTIFIER relation_list .
    (11) relation_list -> relation_list . relation
    (13) relation -> . relation_type source target_participants SLASH GT
    (22) relation_type -> . EXTENDS
    (23) relation_type -> . INCLUDE
    (24) relation_type -> . INHERIT
    (25) relation_type -> . SIMPLE
    (26) relation_type -> . USES
    (27) relation_type -> . REALIZES
    (28) relation_type -> . ASSOCIATES
    (29) relation_type -> . DEPENDS

    $end            reduce using rule 10 (relations -> PACKAGE IDENTIFIER relation_list .)
    EXTENDS         shift and go to state 17
    INCLUDE         shift and go to state 18
    INHERIT         shift and go to state 19
    SIMPLE          shift and go to state 20
    USES            shift and go to state 21
    REALIZES        shift and go to state 22
    ASSOCIATES      shift and go to state 23
    DEPENDS         shift and go to state 24

    relation                       shift and go to state 29
    relation_type                  shift and go to state 16

state 15

    (12) relation_list -> relation .

    EXTENDS         reduce using rule 12 (relation_list -> relation .)
    INCLUDE         reduce using rule 12 (relation_list -> relation .)
    INHERIT         reduce using rule 12 (relation_list -> relation .)
    SIMPLE          reduce using rule 12 (relation_list -> relation .)
    USES            reduce using rule 12 (relation_list -> relation .)
    REALIZES        reduce using rule 12 (relation_list -> relation .)
    ASSOCIATES      reduce using rule 12 (relation_list -> relation .)
    DEPENDS         reduce using rule 12 (relation_list -> relation .)
    $end            reduce using rule 12 (relation_list -> relation .)


state 16

    (13) relation -> relation_type . source target_participants SLASH GT
    (14) source -> . element_type IDENTIFIER
    (17) element_type -> . CASE
    (18) element_type -> . ACTOR
    (19) element_type -> . CLASS
    (20) element_type -> . COMPONENT
    (21) element_type -> . INTERFACE

    CASE            shift and go to state 32
    ACTOR           shift and go to state 33
    CLASS           shift and go to state 34
    COMPONENT       shift and go to state 35
    INTERFACE       shift and go to state 36

    source                         shift and go to state 30
    element_type                   shift and go to state 31

state 17

    (22) relation_type -> EXTENDS .

    CASE            reduce using rule 22 (relation_type -> EXTENDS .)
    ACTOR           reduce using rule 22 (relation_type -> EXTENDS .)
    CLASS           reduce using rule 22 (relation_type -> EXTENDS .)
    COMPONENT       reduce using rule 22 (relation_type -> EXTENDS .)
    INTERFACE       reduce using rule 22 (relation_type -> EXTENDS .)


state 18

    (23) relation_type -> INCLUDE .

    CASE            reduce using rule 23 (relation_type -> INCLUDE .)
    ACTOR           reduce using rule 23 (relation_type -> INCLUDE .)
    CLASS           reduce using rule 23 (relation_type -> INCLUDE .)
    COMPONENT       reduce using rule 23 (relation_type -> INCLUDE .)
    INTERFACE       reduce using rule 23 (relation_type -> INCLUDE .)


state 19

    (24) relation_type -> INHERIT .

    CASE            reduce using rule 24 (relation_type -> INHERIT .)
    ACTOR           reduce using rule 24 (relation_type -> INHERIT .)
    CLASS           reduce using rule 24 (relation_type -> INHERIT .)
    COMPONENT       reduce using rule 24 (relation_type -> INHERIT .)
    INTERFACE       reduce using rule 24 (relation_type -> INHERIT .)


state 20

    (25) relation_type -> SIMPLE .

    CASE            reduce using rule 25 (relation_type -> SIMPLE .)
    ACTOR           reduce using rule 25 (relation_type -> SIMPLE .)
    CLASS           reduce using rule 25 (relation_type -> SIMPLE .)
    COMPONENT       reduce using rule 25 (relation_type -> SIMPLE .)
    INTERFACE       reduce using rule 25 (relation_type -> SIMPLE .)


state 21

    (26) relation_type -> USES .

    CASE            reduce using rule 26 (relation_type -> USES .)
    ACTOR           reduce using rule 26 (relation_type -> USES .)
    CLASS           reduce using rule 26 (relation_type -> USES .)
    COMPONENT       reduce using rule 26 (relation_type -> USES .)
    INTERFACE       reduce using rule 26 (relation_type -> USES .)


state 22

    (27) relation_type -> REALIZES .

    CASE            reduce using rule 27 (relation_type -> REALIZES .)
    ACTOR           reduce using rule 27 (relation_type -> REALIZES .)
    CLASS           reduce using rule 27 (relation_type -> REALIZES .)
    COMPONENT       reduce using rule 27 (relation_type -> REALIZES .)
    INTERFACE       reduce using rule 27 (relation_type -> REALIZES .)


state 23

    (28) relation_type -> ASSOCIATES .

    CASE            reduce using rule 28 (relation_type -> ASSOCIATES .)
    ACTOR           reduce using rule 28 (relation_type -> ASSOCIATES .)
    CLASS           reduce using rule 28 (relation_type -> ASSOCIATES .)
    COMPONENT       reduce using rule 28 (relation_type -> ASSOCIATES .)
    INTERFACE       reduce using rule 28 (relation_type -> ASSOCIATES .)


state 24

    (29) relation_type -> DEPENDS .

    CASE            reduce using rule 29 (relation_type -> DEPENDS .)
    ACTOR           reduce using rule 29 (relation_type -> DEPENDS .)
    CLASS           reduce using rule 29 (relation_type -> DEPENDS .)
    COMPONENT       reduce using rule 29 (relation_type -> DEPENDS .)
    INTERFACE       reduce using rule 29 (relation_type -> DEPENDS .)


state 25

    (4) definition -> ACTORS EQUALS LBRACE actors . RBRACE
    (6) actors -> actors . COMMA IDENTIFIER

    RBRACE          shift and go to state 37
    COMMA           shift and go to state 38


state 26

    (7) actors -> IDENTIFIER .

    RBRACE          reduce using rule 7 (actors -> IDENTIFIER .)
    COMMA           reduce using rule 7 (actors -> IDENTIFIER .)


state 27

    (5) definition -> CASES EQUALS LBRACE cases . RBRACE
    (8) cases -> cases . COMMA IDENTIFIER

    RBRACE          shift and go to state 39
    COMMA           shift and go to state 40


state 28

    (9) cases -> IDENTIFIER .

    RBRACE          reduce using rule 9 (cases -> IDENTIFIER .)
    COMMA           reduce using rule 9 (cases -> IDENTIFIER .)


state 29

    (11) relation_list -> relation_list relation .

    EXTENDS         reduce using rule 11 (relation_list -> relation_list relation .)
    INCLUDE         reduce using rule 11 (relation_list -> relation_list relation .)
    INHERIT         reduce using rule 11 (relation_list -> relation_list relation .)
    SIMPLE          reduce using rule 11 (relation_list -> relation_list relation .)
    USES            reduce using rule 11 (relation_list -> relation_list relation .)
    REALIZES        reduce using rule 11 (relation_list -> relation_list relation .)
    ASSOCIATES      reduce using rule 11 (relation_list -> relation_list relation .)
    DEPENDS         reduce using rule 11 (relation_list -> relation_list relation .)
    $end            reduce using rule 11 (relation_list -> relation_list relation .)


state 30

    (13) relation -> relation_type source . target_participants SLASH GT
    (15) target_participants -> . target_participants element_type IDENTIFIER
    (16) target_participants -> . element_type IDENTIFIER
    (17) element_type -> . CASE
    (18) element_type -> . ACTOR
    (19) element_type -> . CLASS
    (20) element_type -> . COMPONENT
    (21) element_type -> . INTERFACE

    CASE            shift and go to state 32
    ACTOR           shift and go to state 33
    CLASS           shift and go to state 34
    COMPONENT       shift and go to state 35
    INTERFACE       shift and go to state 36

    target_participants            shift and go to state 41
    element_type                   shift and go to state 42

state 31

    (14) source -> element_type . IDENTIFIER

    IDENTIFIER      shift and go to state 43


state 32

    (17) element_type -> CASE .

    IDENTIFIER      reduce using rule 17 (element_type -> CASE .)


state 33

    (18) element_type -> ACTOR .

    IDENTIFIER      reduce using rule 18 (element_type -> ACTOR .)


state 34

    (19) element_type -> CLASS .

    IDENTIFIER      reduce using rule 19 (element_type -> CLASS .)


state 35

    (20) element_type -> COMPONENT .

    IDENTIFIER      reduce using rule 20 (element_type -> COMPONENT .)


state 36

    (21) element_type -> INTERFACE .

    IDENTIFIER      reduce using rule 21 (element_type -> INTERFACE .)


state 37

    (4) definition -> ACTORS EQUALS LBRACE actors RBRACE .

    PACKAGE         reduce using rule 4 (definition -> ACTORS EQUALS LBRACE actors RBRACE .)
    ACTORS          reduce using rule 4 (definition -> ACTORS EQUALS LBRACE actors RBRACE .)
    CASES           reduce using rule 4 (definition -> ACTORS EQUALS LBRACE actors RBRACE .)


state 38

    (6) actors -> actors COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 44


state 39

    (5) definition -> CASES EQUALS LBRACE cases RBRACE .

    PACKAGE         reduce using rule 5 (definition -> CASES EQUALS LBRACE cases RBRACE .)
    ACTORS          reduce using rule 5 (definition -> CASES EQUALS LBRACE cases RBRACE .)
    CASES           reduce using rule 5 (definition -> CASES EQUALS LBRACE cases RBRACE .)


state 40

    (8) cases -> cases COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 45


state 41

    (13) relation -> relation_type source target_participants . SLASH GT
    (15) target_participants -> target_participants . element_type IDENTIFIER
    (17) element_type -> . CASE
    (18) element_type -> . ACTOR
    (19) element_type -> . CLASS
    (20) element_type -> . COMPONENT
    (21) element_type -> . INTERFACE

    SLASH           shift and go to state 46
    CASE            shift and go to state 32
    ACTOR           shift and go to state 33
    CLASS           shift and go to state 34
    COMPONENT       shift and go to state 35
    INTERFACE       shift and go to state 36

    element_type                   shift and go to state 47

state 42

    (16) target_participants -> element_type . IDENTIFIER

    IDENTIFIER      shift and go to state 48


state 43

    (14) source -> element_type IDENTIFIER .

    CASE            reduce using rule 14 (source -> element_type IDENTIFIER .)
    ACTOR           reduce using rule 14 (source -> element_type IDENTIFIER .)
    CLASS           reduce using rule 14 (source -> element_type IDENTIFIER .)
    COMPONENT       reduce using rule 14 (source -> element_type IDENTIFIER .)
    INTERFACE       reduce using rule 14 (source -> element_type IDENTIFIER .)


state 44

    (6) actors -> actors COMMA IDENTIFIER .

    RBRACE          reduce using rule 6 (actors -> actors COMMA IDENTIFIER .)
    COMMA           reduce using rule 6 (actors -> actors COMMA IDENTIFIER .)


state 45

    (8) cases -> cases COMMA IDENTIFIER .

    RBRACE          reduce using rule 8 (cases -> cases COMMA IDENTIFIER .)
    COMMA           reduce using rule 8 (cases -> cases COMMA IDENTIFIER .)


state 46

    (13) relation -> relation_type source target_participants SLASH . GT

    GT              shift and go to state 49


state 47

    (15) target_participants -> target_participants element_type . IDENTIFIER

    IDENTIFIER      shift and go to state 50


state 48

    (16) target_participants -> element_type IDENTIFIER .

    SLASH           reduce using rule 16 (target_participants -> element_type IDENTIFIER .)
    CASE            reduce using rule 16 (target_participants -> element_type IDENTIFIER .)
    ACTOR           reduce using rule 16 (target_participants -> element_type IDENTIFIER .)
    CLASS           reduce using rule 16 (target_participants -> element_type IDENTIFIER .)
    COMPONENT       reduce using rule 16 (target_participants -> element_type IDENTIFIER .)
    INTERFACE       reduce using rule 16 (target_participants -> element_type IDENTIFIER .)


state 49

    (13) relation -> relation_type source target_participants SLASH GT .

    EXTENDS         reduce using rule 13 (relation -> relation_type source target_participants SLASH GT .)
    INCLUDE         reduce using rule 13 (relation -> relation_type source target_participants SLASH GT .)
    INHERIT         reduce using rule 13 (relation -> relation_type source target_participants SLASH GT .)
    SIMPLE          reduce using rule 13 (relation -> relation_type source target_participants SLASH GT .)
    USES            reduce using rule 13 (relation -> relation_type source target_participants SLASH GT .)
    REALIZES        reduce using rule 13 (relation -> relation_type source target_participants SLASH GT .)
    ASSOCIATES      reduce using rule 13 (relation -> relation_type source target_participants SLASH GT .)
    DEPENDS         reduce using rule 13 (relation -> relation_type source target_participants SLASH GT .)
    $end            reduce using rule 13 (relation -> relation_type source target_participants SLASH GT .)


state 50

    (15) target_participants -> target_participants element_type IDENTIFIER .

    SLASH           reduce using rule 15 (target_participants -> target_participants element_type IDENTIFIER .)
    CASE            reduce using rule 15 (target_participants -> target_participants element_type IDENTIFIER .)
    ACTOR           reduce using rule 15 (target_participants -> target_participants element_type IDENTIFIER .)
    CLASS           reduce using rule 15 (target_participants -> target_participants element_type IDENTIFIER .)
    COMPONENT       reduce using rule 15 (target_participants -> target_participants element_type IDENTIFIER .)
    INTERFACE       reduce using rule 15 (target_participants -> target_participants element_type IDENTIFIER .)

